--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,9 @@
       "email": "contact@lmihaylov.com"
     }
   ],
-  "require": {},
+  "require": {
+    "php": ">=7.0.0"
+  },
   "autoload": {
     "psr-4": {
       "ExpressionBuilder\\": "src/"
